--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bluebird": "^3.5.0",
     "cron": "^1.2.1",
     "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
     "firebase-admin": "^5.0.0",
+    "graphql": "^0.11.7",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
